--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 	    <meta charset="utf-8">
-		<title>LightningViewer</title>
+		<title>LightningPlayer</title>
     	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
    		<link type="text/css" rel="stylesheet" href="./css/main.css">
 		<script src="./js/libraries/latk.min.js"></script>
