--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			}
 
 			let cachePlayer = new CachePlayer();
-			const texture = new THREE.TextureLoader().load("./files/brush.png");
+			const texture = new THREE.TextureLoader().load("./images/brush.png");
 
 			// ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 
